--- a/IIITL_website_training/DOM_10-08-2022/AssignmentEval/Index.html
+++ b/IIITL_website_training/DOM_10-08-2022/AssignmentEval/Index.html
@@ -9,6 +9,13 @@
     <link rel="stylesheet" href="app.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+        <style>footer {
+            display: flex;
+            justify-content: center;
+            padding: 5px;
+            background-color: black;
+            color: #fff;
+        }</style>
 </head>
 
 <body onload="initialize()">
@@ -16,6 +23,7 @@
         <nav class="navbar navbar-expand-lg bg-black">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#" style="color:white;">UPPCL</a>
+                
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -62,27 +70,27 @@
         <div class="row">
             <div class="col">
                 <h3>Room 1</h3>
-                <table class="table table-success table-striped room1">
+                <table class="table table-success table-striped ">
                     <tr>
                         <th>Item Name</th>
                         <th>Wattage</th>
                         <th>Usage(hr/day) </th>
                         <th>Action</th>
                     </tr>
-                    <tr class="appliance">
+                    <tr class="appliance1">
                         <td>Fan 1</td>
                         <td><input type="number" name="" id="fan1" class="form-control wattField" placeholder="Wattage">
                         </td>
                         <td><input type="number" name="" id="fan1" class="form-control usageField" placeholder="Hr/day">
                         </td>
                         <!-- <td><input type="text" name="" id="fan1" class="form-control" placeholder="Wattage"></td> -->
-                        <td><button type="button" class="btn btn-dark">Delete</button></td>
+                        <td><button type="button" name="b1"class="btn btn-dark" onclick="remove(event)">Delete</button></td>
                     </tr>
                     <tr class="appliance">
                         <td>Fan 2</td>
-                        <td><input type="text" name="" id="fan1" class="form-control wattField" placeholder="Wattage">
+                        <td><input type="text" name="" id="fan2" class="form-control wattField" placeholder="Wattage">
                         </td>
-                        <td><input type="text" name="" id="fan1" class="form-control usageField" placeholder="Hr/day">
+                        <td><input type="text" name="" id="fan2" class="form-control usageField" placeholder="Hr/day">
                         </td>
                         <!-- <td><input type="text" name="" id="fan1" class="form-control" placeholder="Wattage"></td> -->
                         <td><button type="button" class="btn btn-dark">Delete</button></td>
@@ -354,7 +362,16 @@
                 <p class="billAmount">Your Bill</p>
             </div> -->
     </div>
-
+    <footer>
+        <hr>
+        <div class="footer">Team Member</div>
+        <ul style="list-style: none">
+            <li>Priyanka Athwani</li>
+            <li>Amit Yadav</li>
+            <li>Dev Raghvendra Lama</li>
+            <li>Rohan</li>
+        </ul>
+    </footer>
 
 
 
