--- a/IIITL_website_training/DOM_10-08-2022/AssignmentEval/Index.html
+++ b/IIITL_website_training/DOM_10-08-2022/AssignmentEval/Index.html
@@ -9,13 +9,7 @@
     <link rel="stylesheet" href="app.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-        <style>footer {
-            display: flex;
-            justify-content: center;
-            padding: 5px;
-            background-color: black;
-            color: #fff;
-        }</style>
+    <link rel="stylesheet" href="billCalculation.css">
 </head>
 
 <body onload="initialize()">
