--- a/Eval2/login.html
+++ b/Eval2/login.html
@@ -57,96 +57,109 @@
             </div>
         </nav>
     </header>
-    <div class="container text-center">
-        <div class="row">
-            <div class="col">
-                <section class="h-100 gradient-form" style="background-color: #eee;">
-                    <div class="container py-5 h-100">
-                        <div class="row d-flex justify-content-center align-items-center h-100">
-                            <div class="col-xl-10">
-                                <div class="card rounded-3 text-black">
-                                    <div class="row g-0">
-                                        <div class="col-lg-6">
-                                            <div class="card-body p-md-5 mx-md-4">
+    <!-- <div class="container-fluid text-center"> -->
+    <div class="row">
+        <div class="col">
+            <section class="h-100 gradient-form" style="background-color: #eee;">
+                <div class="container py-5 h-100">
+                    <div class="row d-flex justify-content-center align-items-center h-100">
+                        <div class="col-xl-10">
+                            <div class="card rounded-3 text-black">
+                                <div class="row g-0">
+                                    <div class="col-lg-6">
+                                        <div class="card-body p-md-5 mx-md-4">
 
-                                                <div class="text-center">
-                                                    <img src="./images/logo.png" style="width: 185px;" alt="logo">
-                                                    <h4 class="mt-1 mb-5 pb-1">UPPCL Directory</h4>
+                                            <div class="text-center">
+                                                <img src="./images/logo.png" style="width: 185px;" alt="logo">
+                                                <h4 class="mt-1 mb-5 pb-1">UPPCL Directory</h4>
+                                            </div>
+
+                                            <form>
+                                                <p>Please login to your account</p>
+
+                                                <div class="form-outline mb-4">
+                                                    <!-- <label class="form-label" for="form2Example11">Username</label> -->
+                                                    <input type="email" id="form2Example11" class="form-control"
+                                                        placeholder="Username" />
+
                                                 </div>
 
-                                                <form>
-                                                    <p>Please login to your account</p>
+                                                <div class="form-outline mb-4">
+                                                    <!-- <label class="form-label" for="form2Example22">Password</label> -->
+                                                    <input type="password" id="form2Example22" class="form-control"
+                                                        placeholder="Password" />
 
-                                                    <div class="form-outline mb-4">
-                                                        <!-- <label class="form-label" for="form2Example11">Username</label> -->
-                                                        <input type="email" id="form2Example11" class="form-control"
-                                                            placeholder="Username" />
+                                                </div>
 
-                                                    </div>
+                                                <div class="text-center pt-1 mb-5 pb-1">
+                                                    <button
+                                                        class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3"
+                                                        type="button">Log
+                                                        in</button>
+                                                    <a class="text-muted" href="#!">Forgot password?</a>
+                                                </div>
 
-                                                    <div class="form-outline mb-4">
-                                                        <!-- <label class="form-label" for="form2Example22">Password</label> -->
-                                                        <input type="password" id="form2Example22" class="form-control"
-                                                            placeholder="Password" />
+                                                <div class="d-flex align-items-center justify-content-center pb-4">
+                                                    <p class="mb-0 me-2">Don't have an account?</p>
+                                                    <button type="button" class="btn btn-outline-danger">Create
+                                                        new</button>
+                                                </div>
 
-                                                    </div>
+                                            </form>
 
-                                                    <div class="text-center pt-1 mb-5 pb-1">
-                                                        <button
-                                                            class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3"
-                                                            type="button">Log
-                                                            in</button>
-                                                        <a class="text-muted" href="#!">Forgot password?</a>
-                                                    </div>
-
-                                                    <div class="d-flex align-items-center justify-content-center pb-4">
-                                                        <p class="mb-0 me-2">Don't have an account?</p>
-                                                        <button type="button" class="btn btn-outline-danger">Create
-                                                            new</button>
-                                                    </div>
-
-                                                </form>
-
-                                            </div>
                                         </div>
-                                        <div class="col-lg-6 d-flex align-items-center gradient-custom-2">
-                                            <div class="text-white px-3 py-4 p-md-5 mx-md-4">
-                                                <h4 class="mb-4">Welcome to UPPCL</h4>
-                                                <hr>
-                                                <p class="small mb-0" style="justify-content:left">The creation of Uttar Pradesh Power Corporation
-                                                    Ltd. (UPPCL) on January 14, 2000 is the result of power sector
-                                                    reforms and restructuring in UP (India) which is the focal point of
-                                                    the Power Sector, responsible for planning and managing the sector
-                                                    through its transmission, distribution and supply of electricity.
+                                    </div>
+                                    <div class="col-lg-6 d-flex align-items-center gradient-custom-2">
+                                        <div class="text-white px-3 py-4 p-md-5 mx-md-4">
+                                            <h4 class="mb-4">Welcome to UPPCL</h4>
+                                            <hr>
+                                            <p class="small mb-0" style="justify-content:left">The creation of Uttar
+                                                Pradesh Power Corporation
+                                                Ltd. (UPPCL) on January 14, 2000 is the result of power sector
+                                                reforms and restructuring in UP (India) which is the focal point of
+                                                the Power Sector, responsible for planning and managing the sector
+                                                through its transmission, distribution and supply of electricity.
 
-                                                    UPPCL will be professionally managed utility supplying reliable and
-                                                    cost efficient electricity to every citizen of the state through
-                                                    highly motivated employees and state of art technologies, providing
-                                                    an economic return to our owners and maintaining leadership in the
-                                                    country.</p>
-                                            </div>
+                                                UPPCL will be professionally managed utility supplying reliable and
+                                                cost efficient electricity to every citizen of the state through
+                                                highly motivated employees and state of art technologies, providing
+                                                an economic return to our owners and maintaining leadership in the
+                                                country.</p>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </section>
-
-            </div>
+                </div>
+            </section>
 
         </div>
-    </div>
-    <footer>
 
-        <div class="footer">Team Members:</div>
-        <ul style="list-style: disc">
-            <li>Priyanka Athwani</li>
-            <li>Amit Yadav</li>
-            <li>Dev Raghvendra Lama</li>
-            <li>Rohan</li>
-        </ul>
-    </footer>
+
+
+    </div>
+
+
+    <div class="row">
+        <div class="col">
+            <footer style="position: relative;">
+                <div class="col-lg-6 d-flex align-items-center ">Team Members:
+                    <ul style="list-style: disc">
+                        <li>Priyanka Athwani</li>
+                        <li>Amit Yadav</li>
+                        <li>Dev Raghvendra Lama</li>
+                        <li>Rohan</li>
+                    </ul>
+                </div>
+            </footer>
+        </div>
+    </div>
+
+    </div>
+
+
+
     <script src="bill.js"></script>
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
